--- a/css/components.vivo.css
+++ b/css/components.vivo.css
@@ -2294,25 +2294,39 @@ label.tc-switch.right input:checked ~ span:before {
 .tc-modal.show {
   display: block;
 }
+.tc-modal .tc-dialog {
+  margin: 0 auto;
+}
 .tc-dialog {
   position: relative;
-  margin: 20px;
+  margin: 30px auto;
   background: white;
   color: #31313d;
   font-size: 14px;
-  font-weight: 600;
   line-height: 25px;
   text-align: center;
-  padding: 30px 40px 40px;
+  padding: 30px;
   border-radius: 4px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  width: auto;
+}
+@media only screen and (min-width: 480px) {
+  .tc-dialog {
+    width: 60%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .tc-dialog {
+    width: 480px;
+  }
 }
 .tc-dialog header {
   font-size: 26px;
   line-height: 28px;
   margin-bottom: 35px;
+  font-weight: 600;
 }
-.tc-dialog .tc-close {
+.tc-dialog header .tc-button {
   position: absolute;
   top: 5px;
   right: 5px;
@@ -2323,16 +2337,56 @@ label.tc-switch.right input:checked ~ span:before {
   font-size: 15px;
   color: #b3b5b7;
   cursor: pointer;
-  border-radius: 50%;
+}
+.tc-dialog header .tc-button:hover,
+.tc-dialog header .tc-button:focus {
+  color: #ff9900;
+}
+.tc-dialog header .tc-button.active {
+  color: white;
+  background-color: #ff9900;
+}
+.tc-dialog header p {
+  font-size: 14px;
+  line-height: 25px;
+}
+.tc-dialog p {
+  margin: 0 0 10px;
+}
+.tc-dialog ul {
+  text-align: left;
+  padding-left: 16px;
+}
+.tc-dialog ol {
+  text-align: left;
+  padding-left: 20px;
+}
+.tc-dialog .tc-row {
+  text-align: left;
 }
 .tc-dialog footer {
   margin-top: 25px;
 }
 .tc-dialog footer .tc-button {
-  min-width: 120px;
+  display: block;
+  width: 100%;
 }
 .tc-dialog footer .tc-button + .tc-button {
-  margin-left: 7px;
+  margin: 15px 0 0;
+}
+@media only screen and (min-width: 480px) {
+  .tc-dialog footer .tc-button {
+    min-width: 120px;
+    width: auto;
+    display: inline-block;
+  }
+  .tc-dialog footer .tc-button + .tc-button {
+    margin: 0 0 0 7px;
+  }
+}
+.tc-dialog footer p {
+  font-weight: normal;
+  margin: 30px 0 -20px;
 }
 .tc-header {
   position: relative;
