added block option in modal buttons

--- a/css/components.vivo.css
+++ b/css/components.vivo.css
@@ -2346,6 +2346,9 @@ label.tc-switch.right input:checked ~ span:before {
   color: white;
   background-color: #ff9900;
 }
+.tc-dialog header .tc-button.block {
+  width: 100%;
+}
 .tc-dialog header p {
   font-size: 14px;
   line-height: 25px;
@@ -2372,7 +2375,7 @@ label.tc-switch.right input:checked ~ span:before {
   width: 100%;
 }
 .tc-dialog footer .tc-button + .tc-button {
-  margin: 15px 0 0;
+  margin: 7px 0 0;
 }
 @media only screen and (min-width: 480px) {
   .tc-dialog footer .tc-button {
@@ -2380,8 +2383,15 @@ label.tc-switch.right input:checked ~ span:before {
     width: auto;
     display: inline-block;
   }
+  .tc-dialog footer .tc-button.block {
+    width: 100%;
+  }
   .tc-dialog footer .tc-button + .tc-button {
     margin: 0 0 0 7px;
+  }
+  .tc-dialog footer .tc-button.block + .tc-button.block {
+    width: 100%;
+    margin: 7px 0 0;
   }
 }
 .tc-dialog footer p {
